Archive2/80/720fada2e26ef3/output
main.cpp:6:5: error: no matching function for call to 'func'
    func(3, 4, 5);
    ^~~~
main.cpp:3:6: note: candidate function not viable: requires 2 arguments, but 3 were provided
void func(T, Us...,T) {}
     ^
1 error generated.
