Archive2/80/720fada2e26ef3/main.cpp

template<class T, class...Us>
void func(T, Us...,T) {}

int main() {
    func(3, 4, 5);
}